# arxiv-client

./: CHANGELOG.md  README.md  arxiv-client.cabal
app/: Main.hs
cli/: Main.hs
src/Arxiv/: Client.hs  Download.hs  Entry.hs  Filters.hs  Query.hs
src/Arxiv/Query/: Algebraic.hs  Parser.hs
src/Network/Arxiv/: Client.hs  Filters.hs  Query.hs  Types.hs
test/: Main.hs
