cabal-version:      3.0
name:               arxiv-client
version:            0.1.0.0
synopsis:           Tiny client for the arXiv Atom API with a simple query DSL
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Eiko
maintainer:         eikochanowo@outlook.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Arxiv.Entry
      , Arxiv.Client
      , Arxiv.Download
      , Arxiv.Query
      , Arxiv.Query.Parser
      , Arxiv.Query.Algebraic
      , Arxiv.Filters
    hs-source-dirs:   src
    build-depends:
        base          >=4    && <5
      , text          >=2.0  && <2.2
      , bytestring    >=0.10 && <0.13
      , time          >=1.11 && <1.15
      , req           >=3.13 && <3.14
      , xml-conduit   >=1.10 && <1.11
      , megaparsec    >=9.5  && <9.8
      , modern-uri    >=0.3  && <0.4
      , directory     >=1.3  && <1.4
    hs-source-dirs:   src
    default-language: GHC2021

test-suite arxiv-client-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base
      , arxiv-client
      , text
