cabal-version:      3.0
name:               arxiv-client
version:            0.1.0.0
synopsis:           Tiny client for the arXiv Atom API with a simple query DSL
description:        This library provides a tiny client for the arXiv Atom API, allowing users to perform searches, retrieve metadata and download academic papers hosted on arXiv.org. It features a simple domain-specific language for constructing queries, making it easy to filter and sort results based on various criteria such as author, title, abstract, categories, and submission dates.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Eiko
maintainer:         eikochanowo@outlook.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
source-repository head
    type: git
    location: https://github.com/Eiko-Tokura/arxiv-client.git
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Arxiv.Entry
      , Arxiv.Client
      , Arxiv.Download
      , Arxiv.Query
      , Arxiv.Query.Parser
      , Arxiv.Query.Algebraic
      , Arxiv.Filters
    hs-source-dirs:   src
    build-depends:
        base          >=4    && <5
      , aeson         >=2    && <2.3
      , text          >=2.0  && <2.2
      , bytestring    >=0.10 && <0.13
      , time          >=1.11 && <1.15
      , req           >=3.13 && <3.14
      , xml-conduit   >=1.10 && <1.11
      , megaparsec    >=9.5  && <9.8
      , modern-uri    >=0.3  && <0.4
      , directory     >=1.3  && <1.4
    hs-source-dirs:   src
    default-language: GHC2021

test-suite arxiv-client-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base
      , arxiv-client
      , text
